Yaml Configurations/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: car-mircoservices-app
  labels:
    mesh: cars-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
